# dbp-exemption-analysis

./: .gitignore  PROJECT_SETUP_SUMMARY.md  QUICKSTART.md  README.md  TODO  analyze.py  analyze_both.py  analyze_decision_basis.py  analyze_exemption.py  analyze_patterns.py  analyze_scope.py  extract.py  find_docs.py  gallery.html  gallery.py  main.py  parse.py  plot.py  pyproject.toml  settings.py  test.py  visualize_permits.py
config/: path.yaml
data/: mimic.txt
data/cleaned/: data_analyze.csv  data_analyze.json  data_analyze_parsed.json  data_analyze_parsed_decision_basis.json  data_analyze_parsed_granted_exemptions.json  data_cleaned.csv  data_cleaned.json  data_cleaned_enriched.json  data_none_exemption.csv  data_none_exemption.json  data_none_regulation.csv  data_out_exemption.csv  data_out_regulation.csv  data_out_regulation.json
data/ext_docs/: data_analyze_external_dependencies.csv  data_analyze_external_dependencies.json
data/raw/: data.xlsx  ~$data.xlsx
res/figures/: manifest.json
res/figures/both/: metadata.json
res/figures/decision_basis/: metadata.json
res/figures/exemption/: metadata.json
res/figures/patterns/: metadata.json
res/figures/patterns/explore/: composition_report.json  explore_report.json
res/figures/scope/: metadata.json
src/: configuration.py  data_analysis.py  data_clean.py  data_filter.py  text_parser.py  visualize.py
src/utils/: cli_utils.py  env_utils.py  time_utils.py
