[project]
name = "dbp"
version = "0.1.0"
description = "digital building permit analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-calamine>=0.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=13.0.0",
    "seaborn>=0.13.2",
    "squarify>=0.1.0",
]
